# Liked-Saved-Image-Downloader

./: .gitignore  CreateDatabase.py  Generate_Certificates.sh  LICENSE.txt  LikedSavedDatabase.py  LikedSavedDownloaderServer.py  PasswordManager.py  README.md  ReadMe.org  content-collector.service  imageSaver.py  imgurDownloader.py  pinterestScraper.py  pixivScraper.py  pyproject.toml  redditLikedSavedImageDownloader.sublime-project  redditLikedSavedImageDownloader.sublime-workspace  redditScraper.py  redditUserImageScraper.py  scraper.py  settings.py  settings.txt  settings_template.txt  submission.py  tumblrScraper.py  utilities.py  videoDownloader.py
downloaders/: imageSaver.py  imgurDownloader.py  pinterestScraper.py  pixivScraper.py  redditScraper.py  redditUserImageScraper.py  tumblrScraper.py
templates/: Login.html  LoginCreate.html  Settings.html  UnsupportedSubmissions.html
utils/: crcUtils.py  logger.py  utilities.py
webInterface/: UnsupportedSubmissions.js  index.css  index.html  randomImageBrowser.css  randomImageBrowser.html  randomImageBrowser.js  runScript.html  runScript.js  settings.css  settings.html  styles.css
webInterfaceNoAuth/: LoginCreate.js  index.css
