[tool.poetry]
name = "liked-saved-image-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.1.0"
pytumblr = "^0.1.0"
jsonpickle = "^1.4.1"
tornado = "^6.0.4"
youtube-dl = "^2020.7.28"
gfycat = { git = "https://github.com/ankeshanand/py-gfycat", branch = "master" }
pixivpy = { git = "https://github.com/upbit/pixivpy", branch = "master" }
passlib = {version = "^1.7.2", optional = true}
bcrypt = {version = "^3.2.0", optional = true}
argon2_cffi = {version = "^20.1.0", optional = true}
imgurpython = "^1.1.7"

[tool.poetry.extras]
security = ["passlib", "bcrypt", "argon2_cffi"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
